Kumaran/Sudharshan | #NA | Fixing the alignment of loading gif while fetching questionnaires in Add User and edit user page

--- a/datawinners/media/css/scss/form.scss
+++ b/datawinners/media/css/scss/form.scss
@@ -881,7 +881,11 @@ span.selected_list_item_arrow {
 
   .administrative {
     .ajax-loader {
-      margin: 30px 0px 0px 420px;
+      margin: 0;
+
+      img{
+        margin-left: 18px;
+      }
     }
     .section_description {
       padding-bottom: 20px;
